force-app/main/default/objects/Opportunity_Revenue_Schedule_Snapshot__c/Opportunity_Revenue_Schedule_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Opportunity Revenue Schedule Snapshot</label>
    <nameField>
        <displayFormat>ORSS-{00000}</displayFormat>
        <label>Reforecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Revenue Schedule Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>