force-app/main/default/objects/Opportunity_Revenue_Schedule_Snapshot__c/fields/Account_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Opportunity_Name__c</fullName>
    <formula>Account__c + &quot;: &quot; + Opportunity__c</formula>
    <label>Account/Opportunity Name</label>
    <type>Text</type>
</CustomField>