force-app/main/default/objects/Opportunity_Revenue_Schedule_Snapshot__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Revenue Schedule Snapshots</relationshipLabel>
    <relationshipName>Opportunity_Revenue_Schedule_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>