force-app/main/default/objects/Opportunity_Revenue_Schedule_Snapshot__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cycle Direct</fullName>
            </value>
            <value>
                <fullName>Laundry Service</fullName>
            </value>
            <value>
                <fullName>LS-Derived Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>