force-app/main/default/objects/Opportunity_Revenue_Schedule_Snapshot__c/fields/Projected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Start_Date__c</fullName>
    <label>Projected Start Date</label>
    <type>Date</type>
</CustomField>