force-app/main/default/objects/Opportunity_Revenue_Schedule_Snapshot__c/fields/Revenue_Schedule_Cost__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Schedule_Cost__c</fullName>
    <label>Revenue Schedule Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>