force-app/main/default/objects/Opportunity_Revenue_Schedule_Snapshot__c/fields/Revenue_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Schedule_Date__c</fullName>
    <label>Revenue Schedule Date</label>
    <type>Date</type>
</CustomField>