force-app/main/default/objects/Opportunity_Revenue_Schedule_Snapshot__c/fields/Revenue_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Sub_Type__c</fullName>
    <label>Revenue Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Creative</fullName>
            </value>
            <value>
                <fullName>R&amp;I</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>