force-app/main/default/objects/Opportunity_Revenue_Schedule_Snapshot__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retainer</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Media Revenue</fullName>
            </value>
            <value>
                <fullName>Media IO</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Executive Leadership</fullName>
            </value>
            <value>
                <fullName>Account Leadership</fullName>
            </value>
            <value>
                <fullName>Creative</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Channel Management</fullName>
            </value>
            <value>
                <fullName>Strategy, Analytics and Measurement</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Cycle</fullName>
            </value>
            <value>
                <fullName>Cycle Media</fullName>
            </value>
            <value>
                <fullName>Laundry Service</fullName>
            </value>
            <value>
                <fullName>Brands</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Properties</fullName>
            </value>
            <value>
                <fullName>R&amp;I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>