force-app/main/default/objects/Opportunity_Revenue_Schedule_Snapshot__c/fields/Talent__c.field-meta.xml
<CustomField>
    <fullName>Talent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Revenue Schedule Snapshots</relationshipLabel>
    <relationshipName>Opportunity_Revenue_Schedule_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>