force-app/main/default/objects/Opportunity_Revenue_Schedule_Snapshot__c/fields/Talent_Id__c.field-meta.xml
<CustomField>
    <fullName>Talent_Id__c</fullName>
    <label>Talent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>