force-app/main/default/objects/Opportunity_Revenue_Schedule_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Revenue_Schedule_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>